--- a/E-Portfolio/Events.html
+++ b/E-Portfolio/Events.html
@@ -8,7 +8,7 @@
 <nav class="navigation">
 <ul>
  <li><a href="Events.html"> Cluster Meet </a></li>
- <li><a href="Teachersday.html"> Teacher's Day </a></li>
+ <li><a href="TeachersDay.html"> Teacher's Day </a></li>
  <li><a href="Intrams.html"> Intrams </a></li>
  <li><a href="SciMonth.html"> Science Month </a></li>
  <li><a href="APMonth.html"> AP Month </a></li>
@@ -54,4 +54,5 @@ I can apply these things in my future games and even in my academics, to enjoy a
 
 <p style="font-size:25px;text-align:center;"> Credits to my dad and Ang Paham </p>
 </body>
+
 </html>
